...
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/saveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="@color/colorPrimary"
                android:text="Save"
                android:textColor="@android:color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seen_queen_switch"
                app:layout_constraintVertical_bias="0.0" />

            <Switch
                android:id="@+id/seen_mites_switch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/left_padding"
                android:layout_marginTop="8dp"
                android:buttonTint="@color/colorPrimaryDark"
                android:text="@string/mite_check"
                android:textColor="@android:color/primary_text_light"
                android:textSize="18sp"
                android:thumbTint="@color/colorPrimaryDark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/seen_eggs_switch" />

            <Switch
                android:id="@+id/seen_eggs_switch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/left_padding"
...
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/tableHeader"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spacer" />

            <RadioGroup
                android:id="@+id/honeyInput"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/broodText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/tableHeader"
                app:layout_constraintTop_toBottomOf="@+id/spacer">

                <RadioButton
                    android:id="@+id/honey1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimaryDark"
                    android:gravity="fill_horizontal"
                    android:textColorLink="@color/colorAccent" />
...
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/tableHeader"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/honeyText" />

            <RadioGroup
                android:id="@+id/broodInput"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/pollenText"
                app:layout_constraintEnd_toEndOf="parent"
...
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimaryDark" />

                <RadioButton
                    android:id="@+id/brood2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimaryDark" />

                <RadioButton
...
                android:textSize="18sp"
                app:layout_constraintEnd_toStartOf="@+id/tableHeader"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/broodText" />

            <RadioGroup
                android:id="@+id/pollenInput"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center|center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/pollenText"
                app:layout_constraintEnd_toEndOf="parent"
...
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimaryDark" />

                <RadioButton
                    android:id="@+id/pollen3"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimaryDark" />

                <RadioButton
...
