...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="LabelFor,TextFields" />

        <TextView
            android:id="@+id/broodCount"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="1dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="2"
            android:textAlignment="gravity"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/broodLabel"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/broodLabel"
            app:layout_constraintTop_toBottomOf="@+id/honeyCount"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/broodLabel"
            android:layout_width="wrap_content"
...
            android:layout_height="0dp"
            android:gravity="center_vertical"
            android:paddingStart="@dimen/horizontal_padding"
            android:text="Queen"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/pollenCount"
            app:layout_constraintEnd_toEndOf="@+id/miteLabel"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/miteLabel"
            tools:ignore="HardcodedText,RtlSymmetry" />

        <TextView
...
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".5" />

        <CheckBox
            android:id="@+id/eggCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimaryDark"
            android:clickable="false"
            app:layout_constraintBottom_toBottomOf="@+id/eggLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/eggLabel"
            app:layout_constraintTop_toBottomOf="@+id/date" />

        <CheckBox
            android:id="@+id/miteCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimaryDark"
            android:clickable="false"
            app:layout_constraintBottom_toBottomOf="@+id/miteLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/miteLabel"
            app:layout_constraintTop_toBottomOf="@+id/eggCheckbox" />

        <CheckBox
            android:id="@+id/queenCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="@color/colorPrimaryDark"
            android:clickable="false"
            app:layout_constraintBottom_toBottomOf="@+id/queenLabel"
            app:layout_constraintEnd_toEndOf="parent"
...
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/polenLabel" />

        <EditText
            android:id="@+id/notesText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/border"
            android:clickable="false"
...
